# mkstd

./: README.md  pyproject.toml  requirements-dev.txt
examples/libssr/: README.md  data.py  efect_report.py  ssr_data.py  test.xml
examples/libssr/data/: data.hdf5  data.json  data.xml  data.yaml
examples/libssr/output/: data.hdf5  data.json  data.xml  data.yaml  schema.json
examples/petab/: petab_yaml_standard.py
examples/petab/standard/: schema.yaml
examples/petab_sciml/: README.md  example.py  example2.py  example_usage.py  petab_sciml_standard.py
examples/petab_sciml/data/: models0.yaml
examples/petab_sciml/data2/: models1.yaml
examples/petab_sciml/output/: models0.yaml  models1.yaml  schema.json  schema.yaml
mkstd/: __init__.py
mkstd/output/: schema.json  schema.xsd  test_model.hdf5  test_model.json  test_model.yaml
mkstd/standards/: __init__.py  hdf5.py  json.py  standard.py  xml.py  yaml.py
mkstd/types/: __init__.py  array.py
