[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkstd"
dynamic = ["version"]

description = "Make standards compatible with HDF5/JSON/XML/YAML."
readme = "README.md"
authors = [{ name = "Dilan Pathirana", email = "dilan.pathirana@uni-bonn.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["standard", "hdf5", "json", "xml", "yaml"]
dependencies = [
    "pydantic>=2.7.4",
    "hdfdict@git+https://github.com/SiggiGue/hdfdict"
    "pydantic_numpy>=6.0.0",
    "xmlschema>=3.3.1",
    "pyyaml>=6.0.2",
    "oyaml>=1.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[project.urls]
Homepage = "https://github.com/dilpath/mkstd"

[tool.setuptools.dynamic]
version = {attr = "mkstd.__version__"}
